Created new AIs for the guards.

--- a/Scripts/runuo-scripts.csproj
+++ b/Scripts/runuo-scripts.csproj
@@ -92,7 +92,10 @@
     <Compile Include="Context Menus\EatEntry.cs" />
     <Compile Include="Context Menus\OpenBankEntry.cs" />
     <Compile Include="Context Menus\TeachEntry.cs" />
-    <Compile Include="Custom\Engines\AI\AI\PaladinAI.cs" />
+    <Compile Include="Custom\Engines\AI\AI\ArcherGuardAI.cs" />
+    <Compile Include="Custom\Engines\AI\AI\MageGuardAI.cs" />
+    <Compile Include="Custom\Engines\AI\AI\PaladinGuardAI.cs" />
+    <Compile Include="Custom\Engines\AI\AI\WarriorGuard.cs" />
     <Compile Include="Custom\Games\Battle Chess\BaseChessPiece.cs" />
     <Compile Include="Custom\Games\Battle Chess\Chessboard.cs" />
     <Compile Include="Custom\Games\Battle Chess\ChessConfig.cs" />
