--- a/Scripts/runuo-scripts.csproj
+++ b/Scripts/runuo-scripts.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Context Menus\EatEntry.cs" />
     <Compile Include="Context Menus\OpenBankEntry.cs" />
     <Compile Include="Context Menus\TeachEntry.cs" />
+    <Compile Include="Custom\Chests-osi\TreasureChestLevel1.cs" />
+    <Compile Include="Custom\Chests-osi\TreasureChestLevel2.cs" />
+    <Compile Include="Custom\Chests-osi\TreasureChestLevel3.cs" />
+    <Compile Include="Custom\Chests-osi\TreasureChestLevel4.cs" />
     <Compile Include="Custom\Engines\AI\AI\ArcherGuardAI.cs" />
     <Compile Include="Custom\Engines\AI\AI\MageGuardAI.cs" />
     <Compile Include="Custom\Engines\AI\AI\PaladinGuardAI.cs" />
@@ -124,6 +128,97 @@
     <Compile Include="Custom\Mobiles\Guards\BaseTownGuard.cs" />
     <Compile Include="Custom\Mobiles\Guards\Britain\BritainWarriorGuard.cs" />
     <Compile Include="Custom\Mobiles\Guards\WarriorTownGuard.cs" />
+    <Compile Include="Custom\XmlSpawner2\BaseXmlSpawner.cs" />
+    <Compile Include="Custom\XmlSpawner2\ItemFlags.cs" />
+    <Compile Include="Custom\XmlSpawner2\PacketHandlerOverrides.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\TemporaryQuestObject.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlAddFame.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlAddKarma.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlAddTithing.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlAddVirtue.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlData.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlDate.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlDeathAction.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlDex.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlDialog.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlEnemyMastery.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlFire.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlFreeze.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlHue.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlInt.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlLifeDrain.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlLightning.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlLocalVariable.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlMagicWord.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlManaDrain.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlMessage.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlMinionStrike.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlMorph.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlSaveItem.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlSkill.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlSound.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlStamDrain.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlStr.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlUse.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlValue.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttachments\XmlWeaponAbility.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttach\XmlAttach.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttach\XmlAttachment.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlAttach\XmlGetAttachGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\QuestHolder.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\QuestNote.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\SimpleMap.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\SimpleNote.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\SimpleSwitches.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\SimpleTileTrap.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\SingleUseSwitch.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\TimedSwitches.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\XmlQuestMaker.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlItems\XmlSpawnerAddon.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\TalkingBaseCreature.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\TalkingBaseEscortable.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\TalkingBaseVendor.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\TalkingDrake.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\TalkingJeweler.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\TalkingSeekerOfAdventure.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlMobiles\XmlQuestNPC.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlPropsGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetCustomEnumGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetListOptionGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetObjectGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetObjectTarget.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetPoint2DGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetPoint3DGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlPropsGumps\XmlSetTimeSpanGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\QuestLeadersBoard.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\QuestLeadersStone.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\QuestLogGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\QuestRewardGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\QuestRewardStone.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlPlayerQuestGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuest.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestAttachment.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestBook.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestBookGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestGumps.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestHolder.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestHolderGumps.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestLeaders.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestPoints.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestPointsRewards.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlQuest\XmlQuestToken.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlSpawner2.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlSpawnerGumps.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlSpawnerSkillCheck.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlTextEntryBook.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\WhatIsIt.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\WriteMulti.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\XmlAdd.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\XmlCategorizedAddGump.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\XmlEdit.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\XmlFind.cs" />
+    <Compile Include="Custom\XmlSpawner2\XmlUtils\XmlPartialCategorizedAddGump.cs" />
     <Compile Include="Engines\AI\AI\AnimalAI.cs" />
     <Compile Include="Engines\AI\AI\ArcherAI.cs" />
     <Compile Include="Engines\AI\AI\BaseAI.cs" />
@@ -2472,6 +2567,7 @@
     <Compile Include="Targets\PickMoveTarget.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Custom\Chests-osi\" />
     <Folder Include="Custom\Mobiles\Guards\Cove\" />
     <Folder Include="Custom\Mobiles\Guards\Jhelom\" />
     <Folder Include="Custom\Mobiles\Guards\Magincia\" />
@@ -2485,5 +2581,13 @@
     <Folder Include="Custom\Mobiles\Guards\Trinsic\" />
     <Folder Include="Custom\Mobiles\Guards\Vesper\" />
     <Folder Include="Custom\Mobiles\Guards\Yew\" />
+    <Folder Include="Custom\XmlSpawner2\" />
+    <Folder Include="Custom\XmlSpawner2\XmlAttach\" />
+    <Folder Include="Custom\XmlSpawner2\XmlAttachments\" />
+    <Folder Include="Custom\XmlSpawner2\XmlItems\" />
+    <Folder Include="Custom\XmlSpawner2\XmlMobiles\" />
+    <Folder Include="Custom\XmlSpawner2\XmlPropsGumps\" />
+    <Folder Include="Custom\XmlSpawner2\XmlQuest\" />
+    <Folder Include="Custom\XmlSpawner2\XmlUtils\" />
   </ItemGroup>
 </Project>
