OMG guard invasion O_o

--- a/Scripts/runuo-scripts.csproj
+++ b/Scripts/runuo-scripts.csproj
@@ -2661,11 +2661,52 @@
     <Compile Include="Custom\Engines\Spawner\XmlSpawner2\XmlUtils\XmlEdit.cs" />
     <Compile Include="Custom\Engines\Spawner\XmlSpawner2\XmlUtils\XmlFind.cs" />
     <Compile Include="Custom\Engines\Spawner\XmlSpawner2\XmlUtils\XmlPartialCategorizedAddGump.cs" />
+    <Compile Include="Custom\Mobiles\Guards\ArcherTownGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\MageTownGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Britain\BritainArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Britain\BritainMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Cove\CoveWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Cove\CoveArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Cove\CoveMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Jhelom\JhelomWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Jhelom\JhelomArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Jhelom\JhelomMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Minoc\MinocWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Minoc\MinocArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Minoc\MinocMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Yew\YewWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Yew\YewArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Yew\YewMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Moonglow\MoonglowWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Moonglow\MoonglowArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Moonglow\MoonglowMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Nujelm\NujelmWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Nujelm\NujelmArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Nujelm\NujelmMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Ocllo\OclloWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Ocllo\OclloArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Ocllo\OclloMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Papua\PapuaWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Papua\PapuaArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Papua\PapuaMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\SerpentsHold\SerpentsWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\SerpentsHold\SerpentsArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\SerpentsHold\SerpentsMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\SkaraBrae\SkaraWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\SkaraBrae\SkaraArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\SkaraBrae\SkaraMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\PaladinTownGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Britain\BritainPaladinGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Vesper\VesperWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Vesper\VesperArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Vesper\VesperMageGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Trinsic\TrinsicWarriorGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Trinsic\TrinsicArcherGuard.cs" />
+    <Compile Include="Custom\Mobiles\Guards\Trinsic\TrinsicMageGuard.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Custom\Mobiles\Guards\Cove\" />
     <Folder Include="Custom\Mobiles\Guards\Jhelom\" />
-    <Folder Include="Custom\Mobiles\Guards\Magincia\" />
     <Folder Include="Custom\Mobiles\Guards\Minoc\" />
     <Folder Include="Custom\Mobiles\Guards\Moonglow\" />
     <Folder Include="Custom\Mobiles\Guards\Nujelm\" />
