aggiornato il progetto c#

--- a/Scripts/runuo-scripts.csproj
+++ b/Scripts/runuo-scripts.csproj
@@ -92,6 +92,12 @@
     <Compile Include="Custom\Engines\TimeSystemWithSeasonChange\Time System.cs" />
     <Compile Include="Custom\Engines\TimeSystemWithSeasonChange\VariableObject.cs" />
     <Compile Include="Custom\Misc\BandagePacket.cs" />
+    <Compile Include="Custom\Misc\MOTD\Gump.cs" />
+    <Compile Include="Custom\Misc\MOTD\HelpInfo.cs" />
+    <Compile Include="Custom\Misc\MOTD\Info.cs" />
+    <Compile Include="Custom\Misc\MOTD\Main.cs" />
+    <Compile Include="Custom\Misc\MOTD\Utility.cs" />
+    <Compile Include="Custom\Misc\Season.cs" />
     <Compile Include="Custom\Mobiles\Monsters\Elemental\Excremental.cs" />
     <Compile Include="Engines\Help\PageQueueGump.cs" />
     <Compile Include="Engines\Help\StuckMenu.cs" />
